--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/matter.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/matter-attractors.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/matter-wrap.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
   <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
   <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
