--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
   <script language="javascript" type="text/javascript" src="particle.js"></script>
   <script language="javascript" type="text/javascript" src="boundary.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
-  <style> body {padding: 0; margin: 0;} </style>
+  <style>
+  body {
+    padding: 0; margin: 0;
+  }
+
+  .tooltip {
+      text-decoration:none;
+      position:relative;
+      background-color: #ffffff;
+  }
+  </style>
 </head>
 
 <body>
+  <h1 class="tooltip">
+  </h1>
 </body>
 </html>
